--- a/index.html
+++ b/index.html
@@ -3,20 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rallito</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="header">
-
+        <div class="logo">
+            Ralito
+        </div>
+        <div class="nav">
+            <a href="about.html">About</a>
+            <a href="products.html">Products</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </div>
 
     <div id="hero">
-
+        <h1>Rallito</h1>
+        <p> Most carefully picked freshested flowers in all of Tucson!</p>
+        <a id="cta" href="products.html">Shop now</a>
     </div>
 
     <div id="services">
+        <div class="card">
+            <h3>design</h3>
+            <p>des</p>
+            <a class"button" href"services.html">learn more</a>
+        </div>
 
+        <div class="card">
+            <h3>design</h3>
+            <p>des</p>
+            <a class"button" href"services.html">learn more</a>
+        </div>
+         <div class"card">
+            <h3>design</h3>
+            <p>des</p>
+            <a class"button" href"services.html>learn more</a>
+        
     </div>
 
     <div id="testimonials">
@@ -29,6 +53,6 @@
 
     <div id="footer">
 
-    </div>
+    </div> 
 </body>
 </html>
